# dependabot-poetry-private-repo-example

./: .gitignore  pyproject.toml
.github/: dependabot.yml
