[tool.poetry]
name = "dependabot-poetry-lock-bug"
version = "0.1.0"
description = "Minimal example to reproduce dependabot messing up poetry.lock repository references"
authors = ["Daniel Segesdi <daniel.segesdi@turbine.ai>"]
license = "MIT"

[[tool.poetry.source]]
name = "privaterepo"
url = "https://turbinetest.jfrog.io/artifactory/api/pypi/privaterepo/simple"
default = true

[tool.poetry.dependencies]
python = "^3.9"
toml = "==0.10.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
